// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fastify server should load an entity 1`] = `
{
  "$type": "receipt",
  "id": "receipt.test",
  "total": 10,
}
`;

exports[`fastify server should reject bad updates 1`] = `
{
  "error": "Bad Request",
  "message": "insufficient balance available",
  "statusCode": 400,
}
`;

exports[`fastify server should return a 404 if the entity is not found 1`] = `
{
  "error": "Not Found",
  "message": "Not Found",
  "statusCode": 404,
}
`;

exports[`fastify server should update an entity 1`] = `
{
  "$type": "receipt",
  "id": "receipt.test",
  "total": 15,
}
`;
